cleaning + refactoring of security package